Find all possible ways using Descendant Combinator to select the desired text.

--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -6,7 +6,7 @@ div p {
 }
 
 /* 
-[div p | .container p | div.container p] {
+[div p | .container p | div.container p | div .text] {
     color           : red;
     font-size       : 20px;
     text-align      : center;
